fix: s2 accent button color on hover in dark mode
Use the S2 accent button hover color in dark mode, which is darker
than the default (previously was lighter than the default which had
reduced contrast). Adds blue-700.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -341,7 +341,7 @@ main picture:not([class]) > img:not([class]) {
 
 :root:has(#color-scheme:checked) .button--accent {
   --color-button-background-accent: var(--spectrum-blue-800);
-  --color-button-background-accent-hover: var(--spectrum-blue-900);
+  --color-button-background-accent-hover: var(--spectrum-blue-700);
 }
 
 .button--ghost {
